syntax = "proto3";
package antidote.api.exp;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service AntidoteInfoService {

  rpc GetAntidoteInfo(google.protobuf.Empty) returns (AntidoteInfo) {
    option (google.api.http) = {
        get: "/exp/antidoteinfo"
      };
  }
}

message AntidoteInfo {
  string buildSha = 1;
  string antidoteSha = 2;
  string imageVersion = 3;
}


